# shellpad

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: publish.yml  test.yml
assets/: demo.json
docs/: architecture.md
docs/superpowers/plans/: 2026-06-15-code-refactoring-todolist.md  2026-06-15-code-review-fixes.md  2026-06-15-cursor-insert-position.md  2026-06-15-cursor-original-position.md  2026-06-15-cursor-visibility.md  2026-06-15-search-mode-fixes.md  2026-06-15-statusbar-delete-fixes.md  2026-06-15-ui-consistency-fixes.md  2026-06-15-ui-interaction-feedback.md  2026-06-15-ui-layout-structure.md  2026-06-15-ui-theme-system.md  2026-06-15-unify-input-delete.md  2026-06-16-architecture-audit-fixes.md  2026-06-16-architecture-refactoring-coordination.md  2026-06-16-batch1-widget-tests.md  2026-06-16-batch2-events-editor-tests.md  2026-06-16-batch3-handler-tests.md  2026-06-16-code-review-fixes.md  2026-06-16-delete-confirmation-dialog.md  2026-06-16-error-type-unification-impl.md  (+42 more)
src/: action.rs  app.rs  cli.rs  config.rs  error.rs  executor.rs  integration_tests.rs  lib.rs  main.rs  mode.rs  models.rs  storage.rs  test_utils.rs  tui.rs
src/app/: execution.rs  handler.rs  render.rs  toast.rs
src/executor/: async_executor.rs  blocking.rs  events.rs  mod.rs  tests.rs
src/models/: queries.rs  types.rs
src/ui/: components.rs  confirm_dialog.rs  detail_editor.rs  detail_screen.rs  execution_screen.rs  help_screen.rs  main_screen.rs  mod.rs  notification.rs  render.rs  theme.rs  toast.rs  variable_screen.rs
(+46 files in other folders)
