[package]
name = "shellpad"
version = "0.2.6"
edition = "2024"
description = "A Ratatui-based TUI for managing and executing collections of shell commands"
repository = "https://github.com/LHYWilliam/shellpad"
license = "MIT"
keywords = ["tui", "shell", "terminal", "ratatui", "command-runner"]

[dependencies]
ratatui = "0.30.1"
crossterm = "0.29.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
uuid = { version = "1.23.3", features = ["v4", "serde"] }
chrono = { version = "0.4.45", features = ["serde"] }
directories = "6.0.0"
unicode-width = "0.2.2"
clap = { version = "4.6.1", features = ["derive"] }
thiserror = "2.0.18"
